[package]
name = "lmoadll_admin"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3       # 优化文件大小
panic = 'abort'     # 恐慌处理方式, unwind展开栈, abort直接中止进程
lto = "fat"         # false, true, thin, fat, 启用 LTO 可减小二进制大小并提高运行时性能。"fat" 提供最佳优化但增加编译时间
strip = "none"      # 剥离符号none, debuginfo, symbols
codegen-units = 1   # 代码生成单元默认值通常为16, 设置为1可启用最高级别的优化,但会增加编译时间


[dependencies]
actix-web = "4.11.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.0"
once_cell = "1.19.0"

# logger
log = "0.4.28"
env_logger = "0.11.8"
anstyle = "1.0.13"
chrono = { version = "0.4.42", features = ["serde"] }
